@@ -109,51 +109,72 @@ printLogo()
 void
 printUsage(std::ostream &out, bool full)
 {
-	//      123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-
-	out << "Usage: " << WhoAmI 
-		<< " [OPTION] FILENAME [FILENAME ...]" << std::endl
-		<< std::endl;
+  //      123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-
+  out << "Usage: " << WhoAmI 
+      << " [OPTION] FILENAME [FILENAME ...]" << std::endl
+      << std::endl;
+  
+  out << "   or: " << WhoAmI 
+      << " [OPTION] --" << std::endl
+      << std::endl;
+  
+  if (!full)
+    {
+      out << "Specify -h or --help for more detailed usage information." << std::endl
+	  << std::endl;
+      
+      return;
+    }
+  
+  //
+  // As soos as we have more options, we can introduce sections here!
+  //
+  //      123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-
+  out << "     --               Parse from stdin." << std::endl
+      << " -s, --silent         Do not display anything than the actual result." << std::endl
+    //        << "--strongsafety     Check rules also for strong safety." << std::endl
+      << " -p, --plugindir=DIR  Specify additional directory where to look for plugin" << std::endl
+      << "                      libraries (additionally to the installation plugin-dir" << std::endl
+      << "                      and $HOME/.dlvhex/plugins)." << std::endl
+      << " -f, --filter=foo[,bar[,...]]" << std::endl
+      << "                      Only display instances of the specified predicate(s)." << std::endl
+      << " -a, --allmodels      Display all models also under weak constraints." << std::endl
+      << " -r, --reverse        Reverse weak constraint ordering." << std::endl
+      << "     --firstorder     No higher-order reasoning." << std::endl
+      << "     --ruleml         Output in RuleML-format (v0.9)." << std::endl
+      << "     --noeval         Just parse the program, don't evaluate it (only useful" << std::endl
+      << "                      with --verbose)." << std::endl
+      << "     --keepnsprefix   Keep specified namespace-prefixes in the result." << std::endl
+      << "     --solver=S       Use S as ASP engine, where S is one of (dlv,dlvdb)" << std::endl
+      << "     --nocache        Do not cache queries to and answers from external atoms." << std::endl
+      << " -v, --verbose[=N]    Specify verbose category (default: 1):" << std::endl
+      << "                      1  - program analysis information (including dot-file)" << std::endl
+      << "                      2  - program modifications by plugins" << std::endl
+      << "                      4  - intermediate model generation info" << std::endl
+      << "                      8  - timing information (only if configured with" << std::endl
+      << "                                               --enable-debug)" << std::endl
+      << "                      add values for multiple categories." << std::endl
+      << "     --version        Show version information." << std::endl;
+}
 
-	out << "   or: " << WhoAmI 
-		<< " [OPTION] --" << std::endl
-		<< std::endl;
 
-	if (!full)
-	{
-		out << "Specify -h or --help for more detailed usage information." << std::endl
-			<< std::endl;
+void
+printVersion()
+{
+  std::cout << PACKAGE_TARNAME << " " << VERSION << std::endl;
 
-		return;
-	}
+  std::cout << "Copyright (C) 2010 Roman Schindlauer, Thomas Krennwallner, Peter Schüller" << std::endl
+	    << "License LGPLv2+: GNU GPL version 2 or later <http://gnu.org/licenses/lgpl.html>" << std::endl
+	    << "This is free software: you are free to change and redistribute it." << std::endl
+	    << "There is NO WARRANTY, to the extent permitted by law." << std::endl;
 
-	//
-	// As soos as we have more options, we can introduce sections here!
-	//
-	//      123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-
-	out << "     --               Parse from stdin." << std::endl
-		<< " -s, --silent         Do not display anything than the actual result." << std::endl
-		//        << "--strongsafety     Check rules also for strong safety." << std::endl
-		<< " -p, --plugindir=DIR  Specify additional directory where to look for plugin" << std::endl
-		<< "                      libraries (additionally to the installation plugin-dir" << std::endl
-		<< "                      and $HOME/.dlvhex/plugins)." << std::endl
-		<< " -f, --filter=foo[,bar[,...]]" << std::endl
-		<< "                      Only display instances of the specified predicate(s)." << std::endl
-		<< " -a, --allmodels      Display all models also under weak constraints." << std::endl
-		<< " -r, --reverse        Reverse weak constraint ordering." << std::endl
-		<< "     --firstorder     No higher-order reasoning." << std::endl
-		<< "     --ruleml         Output in RuleML-format (v0.9)." << std::endl
-		<< "     --noeval         Just parse the program, don't evaluate it (only useful" << std::endl
-		<< "                      with --verbose)." << std::endl
-		<< "     --keepnsprefix   Keep specified namespace-prefixes in the result." << std::endl
-		<< "     --solver=S       Use S as ASP engine, where S is one of (dlv,dlvdb)" << std::endl
-		<< "     --nocache        Do not cache queries to and answers from external atoms." << std::endl
-		<< " -v, --verbose[=N]    Specify verbose category (default: 1):" << std::endl
-		<< "                      1  - program analysis information (including dot-file)" << std::endl
-		<< "                      2  - program modifications by plugins" << std::endl
-		<< "                      4  - intermediate model generation info" << std::endl
-		<< "                      8  - timing information (only if configured with" << std::endl
-		<< "                                               --enable-debug)" << std::endl
-		<< "                      add values for multiple categories." << std::endl;
+  std::cout << std::endl;
+
+  std::cout << "Homepage: http://www.kr.tuwien.ac.at/research/systems/dlvhex/" << std::endl
+	    << "Support: dlvhex-devel@lists.sourceforge.net" << std::endl
+	    << "Bug reports: http://sourceforge.net/apps/trac/dlvhex/" << std::endl;
+
+  exit(0);
 }
 
 
@@ -380,6 +401,7 @@ main (int argc, char *argv[])
       { "keepnsprefix", no_argument, &longid, 6 },
       { "solver", required_argument, &longid, 7 },
       { "nocache",    no_argument, &longid, 8 },
+      { "version",    no_argument, &longid, 9 },
       { NULL, 0, NULL, 0 }
     };
 
@@ -482,6 +504,10 @@ main (int argc, char *argv[])
 
 	    case 8:
 	      Globals::Instance()->setOption("UseExtAtomCache",0);
+	      break;
+
+	    case 9:
+	      printVersion();
 	      break;
 	    }
 	  break;
